# tss-tango

./: Cargo.toml  README.md
.github/workflows/: rust.yml
accounts/: Cargo.toml
accounts/src/: lib.rs
connector/: Cargo.toml  README.md
connector/src/: ethereum.rs  event_listener.rs  lib.rs  polkadot.rs
contracts/: README.md  package-lock.json  package.json
contracts/contracts/: ERC20.sol  IERC20.sol  swap_price.sol
contracts/scripts/: add_token_config.ts  deploy.ts  deploy_local.ts  deploy_multi.ts  getAmount.ts  swap_local_token.ts  transfer_local.ts  transfer_local_1000.ts  transfer_local_1000_upgraded.ts  transfer_local_mod.ts  transfer_multi_local.ts  transfer_script.ts
database/: Cargo.toml
database/src/: lib.rs  models.rs
events/: Cargo.toml
events/src/: events.rs
examples/: tss_bench_n3t2_1000.rs  tss_bench_run.rs
messages/: Cargo.toml
messages/src/: gossip_message_handler.rs  lib.rs  tss_event_sender.rs
network/: Cargo.toml  README.md
network/src/: lib.rs  network_handler.rs
network/src/utils/: behaviour.rs  behaviour_protocols.rs  identity_handler.rs  mod.rs  network.rs  transport.rs
scripts/tmux/: integration.yaml  readme.md  tss.yaml  tss_bench_n3t2.yaml  tss_swap.yaml
server/: Cargo.toml
server/src/: lib.rs
src/: cli.rs  main.rs
tss/: Cargo.toml  README.md
tss/diagram/: tss_sequence_template.drawio
tss/src/: lib.rs  local_state_struct.rs  signverify.rs  tss_event_handler.rs  tss_event_handler_helper.rs  tss_event_model.rs  tss_service.rs  utils.rs
