[package]
name = "tango-accounts"
version = "0.0.1"
authors = ["Dev <tumukundearnold@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.tumukunde.xyz/"
repository = "https://github.com/ArnoldTumukunde/tss-tango/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
log = "0.4.19"
sp-core = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
sc-keystore = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
sc-service = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
sp-keystore = { version = "0.13.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
keystore = { version = "0.1.0", git = "https://github.com/ArnoldTumukunde/keystore.git"}
