[package]
name = "tango-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
mongodb = "2.3.0"
futures = "0.3.21"
serde_derive = "1.0.144"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio = { version = "1.18.2", features = ["full"] }
chrono = "0.4"
