[package]
name = "tango-messages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
libp2p = {version= "0.50.1"}
log = "0.4.0"
serde_json = "1.0.85"
serde = "1.0.144"
borsh = { version ="0.9", default-features = false }
tokio = { version = "1.18.2", features = ["full"] }
tss = { path = "../tss/", package = "tango-tss"}
events= {path="../events/", package = "tango-events"}
frost-dalek = { version = "0.2.3", git = "https://github.com/ArnoldTumukunde/frost-dalek.git"}
