[package]
name = "tango-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version= "0.50.1", features = ["tokio", "tcp", "dns", "gossipsub", "mdns", "identify", "autonat", "macros"]}
tokio = { version = "1.18.2", features = ["full"] }
serde_json = "1.0.81"
log = "0.4.0"
async-trait = "0.1.53"
once_cell = "1.13.0"
zeroize = "1"
serde = { version = "1.0.136", features = ["derive"] }
base64 = "0.13.0"
dirs = "4.0.0"
message = { path = "../messages/", package = "tango-messages"}
tss = { path = ".././tss/", package = "tango-tss"}
