[package]
name = "tango-network"
version = "0.0.1"
authors = ["Dev <tumukundearnold@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.tumukunde.xyz/"
repository = "https://github.com/ArnoldTumukunde/tss-tango/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = {version= "0.44.0", features = ["tcp-tokio", "dns-tokio"]}
tokio = { version = "1.18.2", features = ["full"] }
serde_json = "1.0.81"
log = "0.4.0"
async-trait = "0.1.53"
env_logger = "0.9.0"
once_cell = "1.13.0"
zeroize = "1"
serde = { version = "1.0.136", features = ["derive"] }
base64 = "0.13.0"
dirs = "4.0.0"
message = { path = "../messages/", package = "tango-messages"}