[package]
name = "tango-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.6.2"
futures = "0.3.21"
log = "0.4.0"

serde_derive = "1.0.144"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

tokio = { version = "1.18.2", features = ["full", "sync"] }
database = {package = "tango-database", path = "../database"}
lazy_static = "1.4.0"
